--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,5 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+/00. Resources/Exam Ref 70-480 Programming in HTML5 with JavaScript and CSS3.pdf
+/00. Resources/Programming in HTML5 with JavaScript and CSS3 Training Guide 2013.pdf
